--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
       content="Portfolio desenvolvido com react, typescript, javascript, axios, context api e sass"
     />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;1,300&amp;family=Space+Mono:ital@0;1&amp;display=swap"
-      rel="stylesheet"
-    />
+    <meta name="google-site-verification" content="MqVbxRHi-5xB0SlNV4nO-o6A-BupBUsyRYLVQSvgCFU" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,300;1,300&family=Space+Mono:ital@1&display=swap" rel="stylesheet">
 
     <title>Eduardo Esteves</title>
   </head>
